--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,27 +1,27 @@
-mock==1.0.1
-nose==1.3.7
+mock
+nose
 
 # Test harness
-pytest==2.7.2
+pytest
 
 # Add loop-on-fail (-f) to py.test
 pytest-xdist
 
 # Coverage
-coverage>=3.6,<4.0
-pytest-cov==2.0.0
+coverage
+pytest-cov
 
 # Linter
-flake8==2.1.0
+flake8
 
 # Linter dependency
-pep8==1.5.6
+pep8
 
 # Linter dependency
-pyflakes==0.8.1
+pyflakes
 
 # freeze time
-freezegun==0.1.9
+freezegun
 
 # fixtures replacement
-factory-boy==2.8.1
+factory-boy
